<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HRW IT-Status</string>
    <string name="main_name">HRW IT-Status</string>
    <string name="status_ok">OK</string>
    <string name="status_warning">Warning</string>
    <string name="status_error">Error</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_unset">Unknown</string>
    <string name="status_inwork">In work</string>
    <string name="refresh">Refresh</string>
    <string name="detail_activity">Details</string>
    <string name="showdetails">Show details</string>
    <string name="openinbrowser">Open link in browser</string>
    <string name="gotowebsite">Open Website</string>
    <string name="about">About...</string>
    <string name="about_app_name">HRW IT-Status App</string>
    <string name="about_app_long">Android App to visualize current IT-Status information for the University of Weingarten.\n\nThe information was also publically available on the web, but has been removed.\nhttp://www.hs-weingarten.de/web/rechenzentrum</string>
   	<string name="cause_i_can">Because I can...</string>     
    <string name="invalid_http_status">Invalid HTTP status code: $1%d</string>     
    <string name="connection_error">Connection error</string>
    <string name="tab_all">All</string>
    <string name="tab_warnings">Warnings</string>
    <string name="tab_statistics">Statistics</string>
    <string name="cancelled">Cancelled</string>
    <string name="send_email">Report problem</string>
    <string name="news">News</string>
    <string name="share">Share</string>
    <string name="share_image">Share graph</string>
    <string name="rz_service_email">rz-service@hs-weingarten.de</string>
    <string name="preferences">Settings</string>
    <string name="prefs_go_to_market">App in Google Play...</string>
    <string name="prefs_go_to_market_long">Rate or leave a comment</string>
</resources>
