<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen" >

    <PreferenceCategory android:title="@string/main_name" >
        <PreferenceScreen
            android:title="@string/gotowebsite"
            android:summary="http://www.hs-weingarten.de/web/rechenzentrum" >

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.hs-weingarten.de/web/rechenzentrum" />
        </PreferenceScreen>
    </PreferenceCategory>
    
    
    <PreferenceCategory android:title="@string/about" >

        <PreferenceScreen
            android:summary="@string/prefs_go_to_market_long"
            android:title="@string/prefs_go_to_market" >

            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=de.saschahlusiak.hrw.dienststatus" />
        </PreferenceScreen>

        <PreferenceScreen
            android:summary="Copyright (c) by Sascha Hlusiak, 2012-2013."
            android:title="@string/about" >

            <intent android:action="de.saschahlusiak.hrw.dienststatus.SHOW_ABOUT" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>